@@ -1,16 +1,20 @@
 package com.example.shinhanQnA.service;
 
 
+import com.example.shinhanQnA.Controller.OauthController;
 import com.example.shinhanQnA.DTO.PendingUserDetailResponse;
 import com.example.shinhanQnA.DTO.PendingUserSummaryResponse;
 import com.example.shinhanQnA.entity.User;
 import com.example.shinhanQnA.repository.*;
 import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +26,8 @@ public class UserService {
     private final BoardRepository boardRepository;
     private final BoardReportRepository boardReportRepository;
     private final LikeRepository likeRepository;
+
+    private static final Logger logger = LoggerFactory.getLogger(OauthController.class);
 
     @Transactional
     public User certifyStudent(String email, Integer students, String name, String department, Integer year, String role, Boolean studentCertified, MultipartFile image) {
@@ -49,9 +55,12 @@ public class UserService {
 
     // 사용자 정보 + 가입 상태 조회
     public User getUserInfo(String email) {
-        return userRepository.findByEmail(email)
+        User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다: " + email));
+        logger.info("[UserService] 조회 사용자 상태: {}", user.getStatus());
+        return user;
     }
+
 
     // 가입 상태 변경 및 저장
     @Transactional
@@ -96,22 +105,64 @@ public class UserService {
         userRepository.deleteById(email);
     }
 
-    // 가입 대기 사용자 전체 조회 (최신순)
+//    // 가입 대기 사용자 전체 조회 (최신순)
+//    public List<PendingUserSummaryResponse> getPendingUsersSummary() {
+//        List<User> pendingUsers = userRepository.findAllByStatusOrderByCreatedAtDesc("가입 대기 중");
+//        return pendingUsers.stream()
+//                .map(PendingUserSummaryResponse::fromEntity)
+//                .toList();
+//    }
+//
+//    // 가입 대기 사용자 상세 조회
+//    public PendingUserDetailResponse getPendingUserDetail(String email) {
+//        User user = userRepository.findByEmail(email)
+//                .orElseThrow(() -> new RuntimeException("해당 사용자를 찾을 수 없습니다: " + email));
+//        if (!"가입 대기 중".equals(user.getStatus())) {
+//            throw new RuntimeException("해당 사용자는 가입 대기 상태가 아닙니다.");
+//        }
+//        return PendingUserDetailResponse.fromEntity(user);
+//    }
+
+    // UserService.java 주요 부분 예시
     public List<PendingUserSummaryResponse> getPendingUsersSummary() {
-        List<User> pendingUsers = userRepository.findAllByStatusOrderByCreatedAtDesc("가입 대기 중");
-        return pendingUsers.stream()
-                .map(PendingUserSummaryResponse::fromEntity)
-                .toList();
+        return userRepository.findByStudentCertifiedTrue().stream()
+                .filter(user -> "가입 대기 중".equals(user.getStatus()))
+                .map(user -> new PendingUserSummaryResponse(
+                        user.getEmail(),
+                        user.getName(),
+                        user.getStudents(),
+                        user.getYear(),
+                        user.getDepartment()
+                ))
+                .collect(Collectors.toList());
     }
 
-    // 가입 대기 사용자 상세 조회
     public PendingUserDetailResponse getPendingUserDetail(String email) {
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new RuntimeException("해당 사용자를 찾을 수 없습니다: " + email));
-        if (!"가입 대기 중".equals(user.getStatus())) {
-            throw new RuntimeException("해당 사용자는 가입 대기 상태가 아닙니다.");
+                .orElseThrow(() -> new RuntimeException("사용자를 찾을 수 없습니다."));
+        if (!user.isStudentCertified() || !"가입 대기 중".equals(user.getStatus())) {
+            throw new RuntimeException("인증된 가입 대기 유저가 아닙니다.");
         }
-        return PendingUserDetailResponse.fromEntity(user);
+        return new PendingUserDetailResponse(
+                user.getEmail(),
+                user.getName(),
+                user.getStudents(),
+                user.getYear(),
+                user.getDepartment(),
+                user.getStudentCardImagePath()
+        );
     }
 
+
+    @Transactional
+    public User saveUser(User user) {
+        logger.info("[UserService] 저장 전 상태: {}", user.getStatus());
+        User savedUser = userRepository.save(user);
+        logger.info("[UserService] 저장 후 상태: {}", savedUser.getStatus());
+        return savedUser;
     }
+
+
+
+
+}
